# brosh

./: .cursorrules  .gitignore  .pre-commit-config.yaml  AGENT.md  CHANGELOG.md  CLAUDE.md  Makefile  PLAN.md  README.md  TEST_SUMMARY.md  TODO.md  brosh.spec  cleanup.sh  llms.txt  package.toml  pyproject.toml  run_tests.py  test_fixes.diff
.cursor/rules/: browser-management.mdc  component-flow.mdc  data-models.mdc  screenshot-algorithms.mdc
.giga/: specifications.json
.github/workflows/: ci.yml  push.yml  release.yml
.specstory/history/: 2025-06-12_16-30-fixing-mcp-call-initialization-errors.md  2025-06-12_18-48-add-pydantic-annotations-to-function.md  2025-06-12_20-20-implement-tasks-from-todo-md-in-models-and-mcp.md  2025-06-12_20-54-review-and-update-project-documentation.md  2025-06-12_23-21-#codebase-analyze-the-changes-between-#file-brosh.md  2025-06-12_23-47-building-and-analyzing-python-project.md  2025-06-12_23-48-start-writing-tests.md
docs/: _config.yml  architecture.md  cli-reference.md  index.md  installation.md  mcp-server.md  output.md  python-api.md  usage.md
scripts/: build.sh  dev-setup.sh  release.sh  test.sh
src/brosh/: __init__.py  api.py  brosh.py  browser.py  capture.py  cli.py  constants.py  image.py  mcp.py  models.py  texthtml.py  tool.py
src/brosh.old/: __main__.py  brosh.py  browser.py  capture.py  cli.py  image.py  mcp.py  models.py  optimize.py
tests/: README.md  conftest.py  test_api.py  test_browser.py  test_cli.py  test_image.py  test_mcp.py  test_models.py  test_package.py  test_texthtml.py
